# src/openapi/openapi.yml
@@ -112,7 +112,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Login' 
             example:
-                  email: malcom@gmail.com
+                  username: malcom@gmail.com
                   password: password1  
       responses:
         200:
@@ -302,9 +302,24 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Todo'
+              type: object
+              required:
+                - username
+                - name
+                - role
+              properties:
+                username:
+                  type: string
+                  pattern: '^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$'
+                  minLength: 4
+                  maxLength: 50
+                name:
+                  type: string
+                role:
+                  type: string
+              
             example:
-              email: 'Watson@gmail.com'
+              username: 'Watson@gmail.com'
               name: 'watson'
               role: 'read-only'
       responses:
